# mednlp-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  fine-tune-trigger.yml
alembic/: env.py
alembic/versions/: d79edea927b7_initial_schema.py
config/: alerting_policies.yaml  pipeline.yaml  prometheus.yml  prompt_templates.yaml
config/grafana/: dashboard_mednlp.json
docker/: api.Dockerfile  fine_tune.Dockerfile  streaming_consumer.Dockerfile  worker.Dockerfile
docs/: deployment.md  runbook.md
scripts/: backfill_vectors.py  bootstrap_db.py  evaluate_rag.py  fine_tune_trigger.py
src/api/: main.py  middleware.py
src/api/routers/: audit.py  query.py
src/core/: config.py  database.py  exceptions.py  models.py  openrouter_client.py  schemas.py  telemetry.py
src/drift_detection/: alert_publisher.py  data_drift.py  embedding_drift.py  label_drift.py
src/embeddings/: ab_router.py  base_embedder.py  biomedbert_embedder.py  lora_mistral_embedder.py  registry.py
src/fine_tuning/: data_prep.py  evaluator.py  icd10_trainer.py  lora_config.py  promote_model.py  triage_trainer.py  vertex_job.py
src/ingestion/: batch_trigger.py  dlq_handler.py  fhir_parser.py  pubsub_consumer.py  schemas.py
src/pipeline/: flow.py  schemas.py
src/pipeline/stages/: deidentifier.py  ner.py  quality_gate.py  segmenter.py  vectorizer.py
src/portal/pages/: 01_semantic_search.py  04_model_dashboard.py
src/rag/: answer_generator.py  context_builder.py  guardrails.py  prompt_templates.py  reranker.py  retriever.py
src/vector_store/: client.py  collections.py  indexer.py  search.py
src/workers/: tasks.py
tests/: conftest.py
tests/fixtures/sample_notes/: consultation.json  discharge_summary.json  operative_report.json  progress_note.json  radiology_report.json
tests/integration/: test_infrastructure.py  test_pubsub_consumer.py
tests/load/: locustfile.py
tests/unit/: test_api.py  test_api_endpoints.py  test_batch_trigger.py  test_config.py  test_dlq_handler.py  test_drift_detection.py  test_embeddings.py  test_exceptions.py  test_fhir_parser.py  test_fine_tuning.py  test_models.py  test_openrouter_client.py  test_pipeline.py  test_pubsub_consumer.py  test_rag.py  test_schemas.py  test_telemetry.py  test_vector_store.py
