[project]
name = "mednlp-platform"
version = "0.1.0"
description = "Clinical Intelligence Platform — NLP pipeline, RAG, fine-tuning, MLOps"
requires-python = ">=3.11,<3.13"
dependencies = [
  # LLM via OpenRouter (OpenAI-compatible)
  "openai==1.51.0",
  # NLP
  "spacy>=3.7.4,<3.9",
  "scispacy>=0.5.4,<0.6",
  "presidio-analyzer>=2.2,<3",
  "presidio-anonymizer>=2.2,<3",
  # ML / Fine-tuning
  "transformers>=4.44,<5",
  "peft>=0.12,<1",
  "datasets>=2.21,<4",
  "accelerate>=0.34,<2",
  # Embeddings & Vector store
  "sentence-transformers>=3.1,<4",
  "qdrant-client>=1.11,<2",
  # Orchestration & API
  "prefect>=3.0,<4",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "celery[redis]>=5.4,<6",
  "redis>=5.0,<6",
  # Database & Data
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "great-expectations>=0.18,<1",
  "pandas>=2.2,<3",
  "pyarrow>=17,<20",
  # MLOps & Observability
  "mlflow>=3.11,<4",
  "torch>=2.6.0,<3",
  "evidently>=0.4,<1",
  "opentelemetry-sdk>=1.27,<2",
  "opentelemetry-exporter-otlp>=1.27,<2",
  "prometheus-client>=0.21,<1",
  # Cloud
  "google-cloud-pubsub>=2.23,<3",
  "google-cloud-storage>=2.18,<3",
  "fhir-resources>=7.1,<8",
  # Utilities
  "pydantic-settings>=2.5,<3",
  "structlog>=24.4,<26",
  "tenacity>=9.0,<10",
  "python-dotenv>=1.0,<2",
  "pyjwt>=2.13.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.6.0,<3"]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "testcontainers[postgres,redis]==4.8.1",
  "httpx==0.27.2",
  "locust==2.31.8",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "types-redis",
  "bandit==1.7.10",
  "safety==3.2.9",
]

[dependency-groups]
dev = [
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "testcontainers[postgres,redis]>=4.8.1",
  "httpx>=0.27.2",
  "bandit>=1.7.10",
  "safety>=3.2.9",
  "types-redis",
  "pytest-timeout>=2.4.0",
  "psycopg2-binary>=2.9.12",
  "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "ANN"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"scripts/**" = ["ANN"]
# fine_tuning uses numpy/HuggingFace types that are inherently Any
"src/fine_tuning/**" = ["ANN401"]
# Streamlit pages use numeric prefixes (Streamlit convention) and E402 for runtime imports
"src/portal/pages/**" = ["N999", "E402", "S110"]
# FastAPI Depends() in function defaults is the canonical DI pattern
"src/api/routers/**" = ["B008"]
# Pipeline stages and workers use lazy-loaded ML/NLP objects typed as Any
"src/pipeline/**" = ["ANN401"]
"src/workers/**" = ["ANN401"]
# Alembic auto-generated migrations may have long lines
"alembic/**" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Third-party decorators (Prefect @task/@flow, FastAPI @app.get, Celery @task,
# tenacity @retry) don't have complete stubs — allow untyped decorators
disallow_untyped_decorators = false
# HuggingFace Trainer, Starlette BaseHTTPMiddleware lack complete generics
disallow_subclassing_any = false
# Streamlit portal pages use dynamic typing (st.cache_data decorators, runtime imports)
exclude = ["src/portal/"]

[[tool.mypy.overrides]]
# These modules call into libraries whose stubs vary across Python/OS versions
# (qdrant-client, mlflow, bitsandbytes, presidio-anonymizer, transformers).
# type: ignore comments are needed in CI (Python 3.12, older stubs) but flagged
# as unused locally (newer stubs). Disable warn_unused_ignores per-module.
module = [
    "src.vector_store.search",
    "src.embeddings.registry",
    "src.embeddings.lora_mistral_embedder",
    "src.pipeline.stages.deidentifier",
    "src.fine_tuning.icd10_trainer",
    "src.fine_tuning.triage_trainer",
]
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
    "notebooks/*",
    # Streamlit UI pages — not unit-testable, covered by /browse QA
    "src/portal/*",
    # GPU trainers require torch — excluded from unit coverage
    "src/fine_tuning/icd10_trainer.py",
    "src/fine_tuning/triage_trainer.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
